# Bount-UI

./: .env.cmake.example  .gitignore  .gitmodules  CMakeLists.txt  Custom.cmake.example  README.md  Utils.cmake
.cmake/: commands.cmake  config.cmake
Resources/SVG/Shaders/: Circle.frag  Circle.vert  Ellipse.frag  Rectangle.frag
examples/BasicShapes/src/: main.cpp
impl/Bount/SVG/: Circle.cpp  Ellipse.cpp  Image.cpp  Line.cpp  Node.cpp  Path.cpp  Polygon.cpp  Polyline.cpp  Rectangle.cpp  TSpan.cpp  Text.cpp  TextPath.cpp
impl/Bount/SVG/Attributes/: Transform.cpp
impl/Bount/SVG/Helpers/: File.cpp
impl/Bount/UI/: Collider.cpp  Layer.cpp  Subsystem.cpp
include/Bount/SVG/: Circle.hpp  Ellipse.hpp  Image.hpp  Lib-Macro.hpp  Line.hpp  Node.hpp  Path.hpp  Polygon.hpp  Polyline.hpp  Precompiled.hpp  Rectangle.hpp  Root.hpp  StandardMacros.hpp  TSpan.hpp  Text.hpp  TextPath.hpp
include/Bount/SVG/Helpers/: File.hpp  String.hpp  svgpp.hpp
include/Bount/SVG/svg++/: Headers.hpp  RapidXML.hpp
include/Bount/UI/: Collider.hpp  Layer.hpp  Lib-Macro.hpp  Placeholder.hpp  Precompiled.hpp  SVGLayer.hpp  StandardMacros.hpp  Surface.hpp  System.hpp
module/Bount/SVG/: Circle.cppm  Ellipse.cppm  Image.cppm  Line.cppm  Node.cppm  Path.cppm  Polygon.cppm  Polyline.cppm  Rectangle.cppm  TSpan.cppm  Text.cppm  TextPath.cppm
module/Bount/SVG/Attributes/: Fill.cppm  Stroke.cppm  Transform.cppm
module/Bount/SVG/Definitions/: ClipPath.cppm  Filter.cppm  LinearGradient.cppm  Marker.cppm  Mask.cppm  Pattern.cppm  RadialGradient.cppm
module/Bount/SVG/Helpers/: File.cppm
module/Bount/UI/: Collider.cppm  Layer.cppm  Subsystem.cppm  UI.cppm
src/Bount/SVG/: Circle.cpp  Ellipse.cpp  Image.cpp  Line.cpp  Node.cpp  Path.cpp  Polygon.cpp  Polyline.cpp  Rectangle.cpp  Root.cpp  TSpan.cpp  Text.cpp  TextPath.cpp
src/Bount/SVG/Attributes/: Fill.cpp  Node.cpp  Stroke.cpp  Transform.cpp
src/Bount/SVG/Definitions/: ClipPath.cpp  Filter.cpp  LinearGradient.cpp  Marker.cpp  Mask.cpp  Node.cpp  Pattern.cpp  RadialGradient.cpp
src/Bount/SVG/Helpers/: File.cpp
src/Bount/UI/: Collider.cpp  Layer.cpp  Placeholder.cpp  SVGLayer.cpp  Surface.cpp  System.cpp
